tree-optimization/107247 - reduce SLP reduction accumulator

The following makes sure to reduce a multi-vector SLP reduction
accumulator to a single vector using vector operations if
easily possible (if the number of lanes in the vector type is
a multiple of the number of scalar accumulators).

	PR tree-optimization/107247
	* tree-vect-loop.cc (vect_create_epilog_for_reduction):
	Reduce multi vector SLP reduction accumulators.  Check
	the adjusted number of accumulator vectors against
	one for the re-use in the epilogue.